renamed page title

--- a/htmlBasics/htmlBasics.html
+++ b/htmlBasics/htmlBasics.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            HTML Basics
+            HTML Basic Page
         </title>
     </head>
     <body>
