--- a/myNameButton/myNameButton.html
+++ b/myNameButton/myNameButton.html
@@ -2,27 +2,21 @@
 
 <head>
     <title>
-        Name Button
+        JavaScript Buttons
     </title>
 </head>
 
 <body>
-    <h2 style="color:blue">
-        <i>My First JavaScript</i>
-    </h2>
-    <!-- This button will display a name on a mouse click -->
-    <button type="button" onclick="myNameAlert()">
-        Click for my name
-    </button>
-    <!-- This button will display a name on mouse click in the console -->
+    <h2 style=color:blue>My First JavaScript</h2>
     <button type="button" onclick="printNameConsole()">
         Click to print my name in the console
     </button>
-    <!-- This button will display a name on mouse click on the document -->
+    <button type="button" onclick="myNameAlert()">
+        Click to print my name on alert
+    </button>
     <button type="button" onclick="printNameDocument()">
         Click to print my name on the document
     </button>
-    <!-- Location of the script file -->
     <script src="myName.js">
     </script>
 </body>
