fixed for mobile viewing

--- a/basicWebsite/index.html
+++ b/basicWebsite/index.html
@@ -70,13 +70,13 @@
                 alt="Kansas City Royals" />
             </div>
 
-            <h3 class="h3-text-center">Visit the
+            <h3 class="text-center">Visit the
               <a href="http://www.kcroyals.com">Royals</a> website to keep up with the latest news</h3>
           </div>
         </div>
       </div>
     </div>
-    <footer class="text-center">
+    <footer class="text-center" style="color: white">
       <hr>
       <p>&copy; 2018
         <a href="https://www.github.com/jgroff8806" style="color: #C09A5B">Jason Groff</a>
