removed ignored attribute and fixed img links

--- a/basicWebsite/index.html
+++ b/basicWebsite/index.html
@@ -6,7 +6,7 @@
   <title>Basic Website with CSS</title>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <meta name="viewport" content="width=device-width, intial-scale=1">
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body class="bodyContainer">
@@ -18,8 +18,8 @@
           <br>
           <div class="thumbnail">
             <div class="centerBlock">
-              <img src="http://i46.photobucket.com/albums/f106/jgroff88/royalsLogo_zpsn1rovls9.png" alt="royalsLogo" class="img-thumbnail img-responsive"
-                alt="Kansas City Royals" />
+              <img src="https://image.ibb.co/dAn2Ln/royals_Logo.png" alt="royalsLogo" class="img-thumbnail img-responsive" alt="Kansas City Royals"
+              />
             </div>
             <div class="caption text-center">1985 & 2015 World Champions</div>
           </div>
@@ -66,8 +66,8 @@
             </blockquote>
 
             <div class="bottomCenterBlock">
-              <img src="http://i46.photobucket.com/albums/f106/jgroff88/KC%20Skyline%20Logo_zpsos8z4gco.png" alt="royalsLogo" class="img-thumbnail img-responsive"
-                alt="Kansas City Royals" />
+              <img src="https://image.ibb.co/nQeA6S/KC_Skyline_Logo.png" alt="kcSkyline" class="img-thumbnail img-responsive" alt="Kansas City Skyline"
+              />
             </div>
 
             <h3 class="text-center">Visit the
