added Google font Roboto Condensed and changed h1 / h3 font sizes

--- a/basicWebsite/index.html
+++ b/basicWebsite/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Basic Website with CSS</title>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width">
 </head>
@@ -25,7 +26,7 @@
           </div>
           <br>
           <div class="timeline">
-            <h3>History of the Kansas City Royals</h3>
+            <h2>History of the Kansas City Royals</h2>
             <ul>
               <li>1969: Kansas City Royals founded as one of four expansion teams</li>
               <li>1969: The first game for the Royals is played at Municipal Stadium, winning 3-1 against the Minnesota Twins</li>
@@ -57,12 +58,14 @@
               </li>
             </ul>
 
-            <blockquote>
-              <p>
+            <blockquote class="blockquote">
+              <p class="mb-0">
                 "Let’s just trust the process. If other people don’t want to trust the process, that’s fine. If other people want to abandon
                 the process, then abandon it. I’m not abandoning the process. I believe in the process."
               </p>
-              <cite>Dayton Moore - 2009 MLB Season</cite>
+              <footer class="blockquote-footer">Dayton Moore
+                <cite title="2009 MLB Season">2009 MLB Season</cite>
+              </footer>
             </blockquote>
 
             <div class="bottomCenterBlock">
