--- a/basicWebsite/index.html
+++ b/basicWebsite/index.html
@@ -6,6 +6,7 @@
   <title>Basic Website with CSS</title>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+  <link rel="shortcut icon" href="">
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width">
 </head>
