--- a/areaOfRectangle/index.html
+++ b/areaOfRectangle/index.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-  <title>Area & Perimeter of a Rectangle</title>
+  <title>Area and Perimeter of a Rectangle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="container">
     <div class="input-container">
-      <h1>Area & Perimeter of a Rectangle</h1>
+      <h1>Area and Perimeter of a Rectangle</h1>
       <input type="text" id="height" placeholder="Height"></input>
       <br>
       <input type="text" id="width" placeholder="Width"></input>
