--- a/positiveNegative/index.html
+++ b/positiveNegative/index.html
@@ -11,7 +11,7 @@
   <br>
   <input type="text" id="num2" placeholder="Number 2"></input>
   <br>
-  <button id="evalButton">Evaluate</button>
+  <button onclick="evalPosNeg();">Evaluate</button>
 
   <script src="app.js">
   </script>
