--- a/positiveNegative/index.html
+++ b/positiveNegative/index.html
@@ -11,9 +11,9 @@
   <br>
   <input type="text" id="num2" placeholder="Number 2"></input>
   <br>
-  <button onclick="evalPosNeg();">Evaluate</button>
+  <button onclick="evalPosNeg()" id="evalButton">Evaluate</button>
 
-  <script src="app.js">
+  <script src="app.js ">
   </script>
 </body>
 
