Week 3 Day 2: Assignment #1 Positive Negative - Finished

--- a/positiveNegative/index.html
+++ b/positiveNegative/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <title>
     Positive Negative
   </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body class="full-page-height">
   <div class="container full-height">
     <div class="row justify-content-center align-items-center full-height">
       <div class="md-col-6">
-        <h2 class="h2">Positive Negative</h2>
+        <h1 class="h1">Positive Negative</h1>
         <form onsubmit="evalPosNeg(event)">
           <div class="form-group">
             <label for="num1">Number 1</label>
