Week 3 Day 2: Assignment #3 Print Odd Numbers - Finished

--- a/printOddNumbers/index.html
+++ b/printOddNumbers/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>
-    Print Odd Numbers
+    Odd Number Loop
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
@@ -13,8 +13,17 @@
     crossorigin="anonymous">
 </head>
 
-<body>
-  <p id="result"></p>
+<body class="body-container">
+  <div class="container full-height">
+    <div class="row justify-content-center align-items-center full-height">
+      <div class="md-col-6">
+        <h1 class="h1 text-warning">Odd Number Loop</h1>
+        <div id="result">
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="app.js">
   </script>
 </body>
