Week 4 Day 1: JavaScript DOM Exercises - Exercise 3 - Finished

--- a/javascriptDOMExercises/exercise3/index.html
+++ b/javascriptDOMExercises/exercise3/index.html
@@ -14,10 +14,7 @@
   <h2>Exercise 3 - Paragraph Background Color</h2>
   <p id="examplePara">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Penatibus et magnis dis parturient montes. Sit amet nisl purus in mollis nunc. Bibendum at varius vel pharetra vel turpis
-    nunc eget lorem. Fermentum odio eu feugiat pretium. Varius quam quisque id diam vel quam. Viverra accumsan in nisl nisi
-    scelerisque eu. Quis auctor elit sed vulputate mi sit amet. Commodo elit at imperdiet dui accumsan sit amet nulla. Rhoncus
-    mattis rhoncus urna neque viverra justo nec ultrices.
+    Penatibus et magnis dis parturient montes.
   </p>
 
   <div>
