--- a/contactinfo-app/index.html
+++ b/contactinfo-app/index.html
@@ -7,13 +7,31 @@
   <title>Contact Form</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
 
 </head>
 
-<body>
-  <h1>Welcome to the world of web apps!!</h1>
+<body class="body-container">
+  <div class="container full-height">
+    <div class="row justify-content-center align-items-center full-height">
+      <div class="md-col-6">
+        <h1 class="h1 text-info text-primary">Contact Form</h1>
+        <form action="" , method="">
+          <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" class="form-control" name="firstName" id="firstName" aria-describedby="firstName" placeholder="">
+            <label for="lastName">Last Name</label>
+            <input type="text" class="form-control" name="firstName" id="lastName" aria-describedby="lastName" placeholder="">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
 
-  <script src="app.js"></script>
+  <script src="app.js">
+  </script>
 </body>
 
 </html>
