added form functionality

--- a/contactinfo-app/index.html
+++ b/contactinfo-app/index.html
@@ -17,7 +17,7 @@
     <div class="row justify-content-center align-items-center full-height">
       <div class="md-col-6">
         <h1 class="h1 text-info text-primary">Contact Form</h1>
-        <form action="" , method="">
+        <form action="/saveContact" , method="post">
           <div class="form-group">
             <label for="firstName">First Name</label>
             <input type="text" class="form-control" name="firstName" id="firstName" aria-describedby="firstName" placeholder="">
