--- a/contactinfo-app/index.html
+++ b/contactinfo-app/index.html
@@ -22,7 +22,7 @@
             <label for="firstName">First Name</label>
             <input type="text" class="form-control" name="firstName" id="firstName" aria-describedby="firstName" placeholder="">
             <label for="lastName">Last Name</label>
-            <input type="text" class="form-control" name="firstName" id="lastName" aria-describedby="lastName" placeholder="">
+            <input type="text" class="form-control" name="lastName" id="lastName" aria-describedby="lastName" placeholder="">
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
