--- a/contactinfo-app/index.html
+++ b/contactinfo-app/index.html
@@ -16,7 +16,7 @@
   <div class="container full-height">
     <div class="row justify-content-center align-items-center full-height">
       <div class="md-col-6">
-        <h1 class="h1 text-info text-primary">Contact Form</h1>
+        <h1 class="h1 text-info text-warning">Contact Form</h1>
         <form action="/saveContact" , method="post">
           <div class="form-group">
             <label for="firstName">First Name</label>
@@ -24,7 +24,7 @@
             <label for="lastName">Last Name</label>
             <input type="text" class="form-control" name="lastName" id="lastName" aria-describedby="lastName" placeholder="">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-warning">Submit</button>
         </form>
       </div>
     </div>
